# simwrapper

./: .browserslistrc  .env  .eslintrc.js  .gitignore  .prettierrc.js  .travis.yml  CHANGELOG.md  CITATION.cff  Dockerfile  README.md  SVN-README.md  babel.config.js  get-latest.sh  index.html  jest.config.js  package-lock.json  package.json  playwright.config.ts  simwrapper.code-workspace  tsconfig.json  vite.config.mts  vite.config.ts  vue.config.js
_github_oauth_server/: Dockerfile  fly.toml  main.js  package-lock.json  package.json
azure-api/: Dockerfile  OmxServer.py  blobfuse-dev.yaml  gunicorn_config.py  pyproject.toml  supervisord.conf
azure-api/static/: index.html
azure-api/static/assets/: AggregateDatasetStreamer.worker-B-jLxvTt.js  AggregateOd-BoXk8agJ.css  AggregateOd-C2xxW5FZ.js  CalculationTable-fEbuLS19.js  CalculationTable-oLS3shLk.css  CarrierViewer-CXTetSHh.js  CarrierViewer-DkAcbAoO.css  CollapsiblePanel-CFHETc7F.js  CollapsiblePanel-DW-6UICi.css  ColorMapSelector-4UY7tMD7.js  ColorMapSelector-D2Dx3tMt.css  ColorsAndWidths-C_kXVV7D.js  DashboardDataManager-DkOzDvle.js  DataFetcher.worker-C5P2VYqm.js  DrawingTool-Cen73xpL.js  DrawingTool-CqHy-5XI.css  EventViewer-BVAup26C.css  EventViewer-V7MDz3fE.js  Flowmap-R_1JxZnS.js  Flowmap-dzPcQ4Lj.css  GridMap-9tBwfdHf.js  GridMap-DI7HtTFN.css  GzipFetcher.worker-BOj_y5oQ.js  GzipFetcher.worker-g93ZCwSR.js  ImageView-C2FPqrBd.js  ImageView-NWk3geFf.css  LayerMap-Dfe-WWKm.js  LayerMap-KnLxosFu.css  LayoutManager-Dj7llsCq.css  LayoutManager-iT366vFI.js  LegendBox-1NZhUn9x.js  LegendBox-CBEOPOKs.css  LegendColors-DvHaaiES.js  LegendStore-CGgeb9zL.js  LineOffsetLayer-D6Sa6Od9.js  LogisticsViewer-BdUTXKCO.js  LogisticsViewer-Dh7lRJXZ.css  MATSimEventStreamer.worker-DXUVw5Da.js  MatrixViewer-DrboEKiR.css  NetworkLinks-D-Ea8_nL.js  (+153 more)
azure-api/static/data/: build-index.js  index.html
azure-api/static/images/tile-icons/: info.txt
docker/: htpasswd  nginx.conf
flask-app/: .gitignore  FlaskApp.py  README.md  fly.toml  nginx.conf  pyproject.toml  pytables.patch  simwrapper-flask-app.service  simwrapper-rclone.service  tables-utils.py
flask-app/static/: INFO.txt
patches/: @deck.gl+layers+8.8.27.patch.orig  @h5web+app++@h5web+lib+14.0.1.patch  dbf+0.1.4.patch  fast-xml-parser+4.0.0-beta.2.patch  fast-xml-parser+4.2.7.patch  papaparse+5.3.2.patch  sax-wasm+2.2.4.patch  shp-write+0.3.2.patch  vuera+0.2.7.patch  zstd-wasm-decoder+0.2.3.patch
pie-chart-demo/: package-lock.json
public/: 404.dashboard.html  404.html  404.simwrapper.html  404.staging.html  CNAME  README.md  icon-atlas-3.xcf  index.html  infections.json  main.wasm  sqlite.worker.js  test-notes.md  test.yaml  v1-info.txt  v2-info.txt  v4-info.txt  v5-info.txt  v6-info-berlin.txt  v6-info-munich.txt  v7-info-berlin.txt  v7-info-heinsberg.txt  v7-info-munich.txt
scripts/: all-days-parser.py  build-index.cjs  build-index.js  build-index.sh  build-travis.sh  convert-matsim-to-gmns-network.py  create-avro-network.py  create-csv-network.py  create-geojson-network.py  create-gmns-network.py  create-json-network.py  create-network-csv.py  create-network.py  create-rvr-geojson-network.py  deploy-ghpages.sh  deploy-simwrapper-app.sh  divi-fetch.py  infection-parser.py  install-sandag.sh  mini-file-server.py  parse-drt-events.py  parse-drt-link-events.py  parse-network.py  prep-zip-file.sh  rki-update.py  serve.py  time-lapse-openberlin.py  time-lapse-snz.py  v7-crunch-berlin.py  v7-crunch-heinsberg.py  v7-crunch-munich.py
wasm/matsim-event-streamer/: .gitignore  Cargo.toml
wasm/matsim-event-streamer/pkg/: matsim_event_streamer.d.ts  matsim_event_streamer.js  matsim_event_streamer_bg.wasm  matsim_event_streamer_bg.wasm.d.ts  package.json
wasm/matsim-event-streamer/src/: lib.rs  matsim-event-streamer copy 3.rs  matsim-event-streamer copy. 4rs  matsim-event-streamer.rs
wasm/xml-network-parser/: Cargo.toml
wasm/xml-network-parser/src/: xml-network-parser.rs
(+725 files in other folders)
