[project]
name = "azure-simwrapper-api"
version = "0.1.0"
description = "Run SimWrapper from an Azure container with Azure blob storage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-storage-blob>=12.24.1",
    "blosc>=1.11.2",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flask-restful>=0.3.10",
    "gunicorn>=23.0.0",
    "openmatrix>=0.3.5.0",
    "requests>=2.32.3",
    "tables>=3.10.2",
]
