[project]
name = "azure-simwrapper-api"
version = "0.1.0"
description = "Run SimWrapper from an Azure container with Azure blob storage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blosc>=1.11.2",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flask-restful>=0.3.10",
    "gunicorn>=23.0.0",
    "openmatrix>=0.3.5.0",
    "tables>=3.10.2",
    "waitress>=3.0.2",
]
