[package]
name = "matsim-event-streamer"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"] # Required for WASM

[dependencies]
libz-rs-sys = { version = "0.4.0" }
wasm-bindgen = { version ="0.2" , default-features = false }
zlib-rs = { version = "0.4.0", default-features = false,  features = ["rust-allocator"] }

