[package]
name = "xml-network-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Required for WASM
path = "src/xml-network-parser.rs"

[[bin]]
name = "xml-network-parser"
path = "src/xml-network-parser.rs"

[dependencies]
flate2 = "1.1.2"
quick-xml = { version = "0.37.5", features = ["serialize"]}
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
wasm-bindgen = { version ="0.2" , default-features = false }

